--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
                 <a href="#">Home</a> |
                 <a href="#">About</a> |
                 <a href="#">Services</a> |
-                <a href="#">Contact</a>
+                <a href="#">Contact Me</a>
             </nav>
         </div>
     </header>
