--- a/index.html
+++ b/index.html
@@ -20,28 +20,45 @@
 <body>
     <header>
         <div class="container">
-            <h1>Jack Cooper</h1>
+            <h1>Jack Alexander Cooper</h1>
             <!-- Navigation Menu -->
             <nav>
                 <a href="#" id="home-link">Home</a> |
-                <a href="#" id="contact-link">Contact Me</a> |
-                <a href="#">Services</a> |
-                <a href="#">Contact Me</a>
+                <a href="#" id="about-link">About Me</a> |
+                <a href="#" id="blogs-link">Blogs</a> |
+                <a href="#" id="contact-link">Contact Me</a>
             </nav>
         </div>
     </header>
     <!-- Home -->
     <div class="container">
         <main>
-            <h2>Welcome to My Website</h2>
-            <p>Hello and welcome to my corner of the internet! I'm a graduate from UC Santa Cruz, where my passion for computer science truly took flight. It was here that I immersed myself in the fascinating intricacies of core CS subjects, while also getting my hands dirty with a variety of exciting projects.
-               My journey in computer science has been nothing short of thrilling, with each day bringing a new challenge and opportunity for growth. Since graduating, I have continued to learn and delve into the world of CS. I am particularly enthralled by the realms of automation and problem-solving, and have a burgeoning interest in artificial intelligence - a field that constantly amazes and inspires me.
-               But life isn't all about algorithms and code. When I'm not in front of a computer, you can find me engrossed in cooking, messing around on the decks, or binging some show. I believe in the power of creativity and continuous learning, and strive to infuse this ethos into every aspect of my life.
-               I'm excited to embark on this next chapter, applying the skills and insights I've gained to make a tangible impact in the world of tech and beyond.</p>
+            <h2>Landing Page</h2>
+                <p>Hello and welcome to my corner of the internet! I'm a graduate from UC Santa Cruz, where my passion for computer science truly took flight. It was here that I immersed myself in the fascinating intricacies of core CS subjects, while also getting my hands dirty with a variety of exciting projects.
+                   My journey in computer science has been nothing short of thrilling, with each day bringing a new challenge and opportunity for growth. Since graduating, I have continued to learn and delve into the world of CS. I am particularly enthralled by the realms of automation and problem-solving, and have a burgeoning interest in artificial intelligence - a field that constantly amazes and inspires me.
+                   But life isn't all about algorithms and code. When I'm not in front of a computer, you can find me engrossed in cooking, messing around on the decks, or binging some show. I believe in the power of creativity and continuous learning, and strive to infuse this ethos into every aspect of my life.
+                   I'm excited to embark on this next chapter, applying the skills and insights I've gained to make a tangible impact in the world of tech and beyond.</p>
         </main>
     </div>
     <!-- Contact Me -->
      <div id="contact" style="display: none;">
+         <div class="container">
+            <h1>Contact Me</h1>
+                <p>I'd love to hear from you! Whether you have a question, a project idea, or just want to say hello, feel free to reach out.</p>
+            
+            <h2>Get In Touch!</h2>
+            <ul>
+                <li>Email: <a href="mailto:Jack_cooper01@yahoo.com">Jack_cooper01@yahoo.com</a></li>
+                <li>LinkedIn: <a href="https://www.linkedin.com/in/yourprofile" target="_blank">Your LinkedIn</a></li>
+                <li>GitHub: <a href="https://github.com/Jack-A-Cooper" target="_blank">Your GitHub</a></li>
+            </ul>
+
+            <h2>Connect With Me!</h2>
+                <p>I'm always open to discussing new projects, creative ideas, or opportunities to be part of your visions. Feel free to connect with me on any of the platforms above, or just drop me a line here. I'll get back to you as soon as possible!</p>
+        </div>
+        <footer>
+            <p>&copy; Jack Alexander Cooper. All Rights Reserved.</p>
+        </footer>
      </div>
 
     <footer>
