--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </div>
     </div>
     <!-- Contact Me -->
-     <div id="contact" style="display: none;">
+     <div id="contact" style="display: block;">
          <div class="container">
             <h1>Contact Me</h1>
                 <p>I'd love to hear from you! Whether you have a question, a project idea, or just want to say hello, feel free to reach out.</p>
