--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </div>
     </header>
     <!-- Home -->
-    <div id="home" style="display: none;">
+    <div id="home">
         <div class="container">
             <main>
                 <img src="url" alt="profilepicture">
@@ -44,7 +44,7 @@
         </div>
     </div>
     <!-- Contact Me -->
-     <div id="contact" style="display: block;">
+     <div id="contact" style="display: none;">
          <div class="container">
             <h1>Contact Me</h1>
                 <p>I'd love to hear from you! Whether you have a question, a project idea, or just want to say hello, feel free to reach out.</p>
@@ -52,18 +52,14 @@
             <h2>Get In Touch!</h2>
             <ul>
                 <li>Email: <a href="mailto:Jack_cooper01@yahoo.com">Jack_cooper01@yahoo.com</a></li>
-                <li>LinkedIn: <a href="https://www.linkedin.com/in/yourprofile" target="_blank">Your LinkedIn</a></li>
+                <li>LinkedIn: <a href="https://www.linkedin.com/in/jackcoop" target="_blank">Your LinkedIn</a></li>
                 <li>GitHub: <a href="https://github.com/Jack-A-Cooper" target="_blank">Your GitHub</a></li>
             </ul>
 
             <h2>Connect With Me!</h2>
                 <p>I'm always open to discussing new projects, creative ideas, or opportunities to be part of your visions. Feel free to connect with me on any of the platforms above, or just drop me a line here. I'll get back to you as soon as possible!</p>
         </div>
-        <footer>
-            <p>&copy; Jack Alexander Cooper. All Rights Reserved.</p>
-        </footer>
      </div>
-
     <footer>
         <div class="container">
             <p>Copyright © Jack Alexander Cooper. All Rights Reserved.</p>
