--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <div id="home">
         <div class="container">
             <main>
-                <blockquote class="imgur-embed-pub" lang="en" data-id="a/GGoUHzp" data-context="false" ><a href="//imgur.com/a/GGoUHzp"></a></blockquote><script async src="//s.imgur.com/min/embed.js" charset="utf-8"></script>
+                <img src="//imgur.com/a/GGoUHzp" alt="profilepicture"></img>
                 <h2>Landing Page</h2>
                     <p>Hello and welcome to my corner of the internet! I'm a graduate from UC Santa Cruz, where my passion for computer science truly took flight. It was here that I immersed myself in the fascinating intricacies of core CS subjects, while also getting my hands dirty with a variety of exciting projects.
                        My journey in computer science has been nothing short of thrilling, with each day bringing a new challenge and opportunity for growth. Since graduating, I have continued to learn and delve into the world of CS. I am particularly enthralled by the realms of automation and problem-solving, and have a burgeoning interest in artificial intelligence - a field that constantly amazes and inspires me.
