--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="container">
             <main>
                 <div class="image-container">
-                    <img src="//imgur.com/a/GGoUHzp" alt="profilepicture"></img>
+                    <img src="https://i.imgur.com/7yTYUIi.jpg" alt="profilepicture"></img>
                 </div>
                 <h2>Landing Page</h2>
                     <p>Hello and welcome to my corner of the internet! I'm a graduate from UC Santa Cruz, where my passion for computer science truly took flight. It was here that I immersed myself in the fascinating intricacies of core CS subjects, while also getting my hands dirty with a variety of exciting projects.
