--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="container">
             <h1>Jack Alexander Cooper</h1>
             <!-- Navigation Menu -->
-            <nav>
+            <nav class="nav">
                 <a href="#" id="home-link">Home</a> |
                 <a href="#" id="about-link">About Me</a> |
                 <a href="#" id="blogs-link">Blogs</a> |
