--- a/index.html
+++ b/index.html
@@ -23,15 +23,15 @@
             <h1>Jack Alexander Cooper</h1>
             <!-- Navigation Menu -->
             <nav class="nav">
-                <a href="#" id="home-link">Home</a> |
-                <a href="#" id="about-link">About Me</a> |
-                <a href="#" id="blogs-link">Blogs</a> |
-                <a href="#" id="contact-link">Contact Me</a>
+                <a href="#home">Home</a> |
+                <a href="#about">About</a> |
+                <a href="#blog">Blog</a> |
+                <a href="#contact">Contact</a>
             </nav>
         </div>
     </header>
     <!-- Home -->
-    <div id="home">
+    <div id="home" class="section">
         <div class="container">
             <main>
                 <div class="image-container">
@@ -45,9 +45,15 @@
                     </p>
             </main>
         </div>
-    </div>
-    <!-- Contact Me -->
-     <div id="contact" style="display: none;">
+     </div>
+     <!-- About -->
+     <div id="about" class="section" style="display: none;">
+     </div>
+     <!-- Blog -->
+     <div id="blog" class="section" style="display: none;">
+     </div>
+     <!-- Contact Me -->
+     <div id="contact" class="section" style="display: none;">
          <div class="container">
             <h1>Contact Me</h1>
                 <p>I'd love to hear from you! Whether you have a question, a project idea, or just want to say hello, feel free to reach out.</p>
