--- a/index.html
+++ b/index.html
@@ -6,17 +6,7 @@
     <title>Jack Cooper - Personal Website</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<script>
-    document.getElementById('home-link').addEventListener('click', function() {
-        document.getElementById('home').style.display = 'block';
-        document.getElementById('contact').style.display = 'none';
-    });
-
-    document.getElementById('contact-link').addEventListener('click', function() {
-        document.getElementById('home').style.display = 'none';
-        document.getElementById('contact').style.display = 'block';
-    });
-</script>
+<script src="script.js"></script>
 <body>
     <header>
         <div class="container">
