--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
             <nav class="nav">
                 <a href="#home">Home</a> |
                 <a href="#about">About</a> |
+                <a href="#projects">Projects</a> |
+                <a href="#demos">Demos</a> |
                 <a href="#blog">Blog</a> |
                 <a href="#contact">Contact</a>
             </nav>
@@ -38,6 +40,12 @@
      </div>
      <!-- About -->
      <div id="about" class="section" style="display: none;">
+     </div>
+     <!-- Projects -->
+     <div id="projects" class="section" style="display: none;">
+     </div>
+     <!-- Demos -->
+     <div id="demos" class="section" style="display: none;">
      </div>
      <!-- Blog -->
      <div id="blog" class="section" style="display: none;">
