--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <script src="script.js"></script>
 <body>
-    <header>
+    <header class="header">
         <div class="container">
             <h1>Jack Alexander Cooper</h1>
             <!-- Navigation Menu -->
