--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="container">
             <h1>Jack Alexander Cooper</h1>
             <!-- Navigation Menu -->
-            <nav class="nav">
+            <nav>
                 <a href="#home">Home</a> |
                 <a href="#about">About</a> |
                 <a href="#projects">Projects</a> |
