--- a/index.html
+++ b/index.html
@@ -10,10 +10,11 @@
 <script src="script.js"></script>
 <body>
     <header>
-        <div class="container">
+        <div id="container">
             <h1>Jack Alexander Cooper</h1>
             <!-- Navigation Menu -->
-            <nav>
+            <div id="navToggle" class="nav-toggle">☰ Menu</div>
+            <nav class="navbar">
                 <a href="#home">Home</a> |
                 <a href="#about">About</a> |
                 <a href="#projects">Projects</a> |
