--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <h1>Jack Alexander Cooper</h1>
             <!-- Navigation Menu -->
             <div id="navToggle" class="nav-toggle">☰ Menu</div>
-            <nav class="navbar">
+            <nav id="navbar" class="navbar">
                 <a href="#home">Home</a> |
                 <a href="#about">About</a> |
                 <a href="#projects">Projects</a> |
