--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div id="container">
             <h1>Jack Alexander Cooper</h1>
             <!-- Navigation Menu -->
-            <div id="navToggle" class="nav-toggle">☰ Menu</div>
+            <div id="navToggle" class="nav-toggle">☰</div>
             <nav id="navbar" class="navbar">
                 <a href="#home">Home</a> |
                 <a href="#about">About</a> |
