--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
          </div>
     </div>
     <footer>
-        <div class="container">
+        <div>
             <p>Copyright © Jack Alexander Cooper. All Rights Reserved.</p>
         </div>
     </footer>
