--- a/index.html
+++ b/index.html
@@ -29,11 +29,19 @@
         <div id="home" class="section">
             <div class="container">
                 <main>
-                    <div class="shadow-divider"></div>
                     <div class="image-container">
+                        <div class="svg-divider">
+                            <svg height="20" width="100%">
+                                <line x1="0" y1="10" x2="100%" y2="10" style="stroke:#333;stroke-width:2" />
+                            </svg>
+                        </div>
                         <img src="https://i.imgur.com/7yTYUIi.jpg" alt="profilepicture"></img>
+                        <div class="svg-divider">
+                            <svg height="20" width="100%">
+                                <line x1="0" y1="10" x2="100%" y2="10" style="stroke:#333;stroke-width:2" />
+                            </svg>
+                        </div>
                     </div>
-                    <div class="shadow-divider"></div>
                     <h2>Jack Cooper's Home Page</h2>
                         <p>Hello and welcome to my corner of the internet!</p>
                 </main>
@@ -43,6 +51,11 @@
          <div id="about" class="section" style="display: none;">
              <div class="container">
                  <h2>About Me!</h2>
+                 <div class="svg-divider">
+                    <svg height="20" width="100%">
+                        <line x1="0" y1="10" x2="100%" y2="10" style="stroke:#333;stroke-width:2" />
+                    </svg>
+                 </div>
                      <p>I'm a graduate from UC Santa Cruz, where my passion for computer science truly took flight. It was here that I immersed myself in the fascinating intricacies of core CS subjects, while also getting my hands dirty with a variety of exciting projects.
                      My journey in computer science has been nothing short of thrilling, with each day bringing a new challenge and opportunity for growth. Since graduating, I have continued to learn and delve into the world of CS. I am particularly enthralled by the realms of automation and problem-solving, and have a burgeoning interest in artificial intelligence - a field that constantly amazes and inspires me.
                      But life isn't all about algorithms and code. When I'm not in front of a computer, you can find me engrossed in cooking, messing around on the decks, or binging some show. I believe in the power of creativity and continuous learning, and strive to infuse this ethos into every aspect of my life.
