--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="author" content="Jack Alexander Cooper">
+    <meta name="description" content="Jack Alexander Cooper CS AI Machine Learning">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jack Cooper - Personal Website</title>
     <link rel="icon" type="image/x-icon" href="favicon.ico">
