--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
          <!-- About -->
          <div id="about" class="section" style="display: none;">
              <div class="container">
-                 <h2>About Me!</h2>
+                 <h1>About Me!</h2>
                  <div class="svg-divider">
                     <svg height="20" width="100%">
                         <line x1="0" y1="10" x2="100%" y2="10" style="stroke:#333;stroke-width:2" />
@@ -67,12 +67,30 @@
          </div>
          <!-- Demos -->
          <div id="demos" class="section" style="display: none;">
+             <h1>Demos</h2>
+                 <div class="svg-divider">
+                    <svg height="20" width="100%">
+                        <line x1="0" y1="10" x2="100%" y2="10" style="stroke:#333;stroke-width:2" />
+                    </svg>
+                  </div>
          </div>
          <!-- Projects -->
          <div id="projects" class="section" style="display: none;">
+             <h1>Projects</h2>
+                 <div class="svg-divider">
+                    <svg height="20" width="100%">
+                        <line x1="0" y1="10" x2="100%" y2="10" style="stroke:#333;stroke-width:2" />
+                    </svg>
+                  </div>
          </div>
          <!-- Blog -->
          <div id="blog" class="section" style="display: none;">
+             <h1>Personal Blog</h2>
+                 <div class="svg-divider">
+                    <svg height="20" width="100%">
+                        <line x1="0" y1="10" x2="100%" y2="10" style="stroke:#333;stroke-width:2" />
+                    </svg>
+                  </div>
          </div>
          <!-- Contact Me -->
          <div id="contact" class="section" style="display: none;">
