--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
         <div id="home" class="section">
             <div class="container">
                 <main>
+                    <h1>Jack Cooper's Home Page</h1>
+                        <p>Hello and welcome to my corner of the internet!</p>
                     <div class="image-container">
                         <div class="svg-divider">
                             <svg height="20" width="100%">
@@ -43,9 +45,13 @@
                                 <line x1="0" y1="10" x2="100%" y2="10" style="stroke:#333;stroke-width:2" />
                             </svg>
                         </div>
+                      </div>
+                    <h2>Quick Tid Bits</h2>
+                    <div class="svg-divider">
+                            <svg height="20" width="100%">
+                                <line x1="0" y1="10" x2="100%" y2="10" style="stroke:#333;stroke-width:2" />
+                            </svg>
                     </div>
-                    <h2>Jack Cooper's Home Page</h2>
-                        <p>Hello and welcome to my corner of the internet!</p>
                 </main>
             </div>
          </div>
