--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
         <div id="home" class="section">
             <div class="container">
                 <main>
-                    <h1>Jack Cooper's Home Page</h1>
+                    <h1 class="landing_page">Jack Cooper's Home Page</h1>
                         <p>Hello and welcome to my corner of the internet!</p>
                     <div class="image-container">
                         <img src="https://i.imgur.com/7yTYUIi.jpg" alt="profilepicture"></img>
                     </div>
-                    <h2>Quick Tid Bits</h2>
+                    <h2 class="landing_page">Quick Tid Bits</h2>
                     <div class="svg-divider">
                             <svg height="20" width="100%">
                                 <line x1="0" y1="10" x2="100%" y2="10" style="stroke:#333;stroke-width:2" />
