--- a/index.html
+++ b/index.html
@@ -36,11 +36,21 @@
                     <div class="image-container">
                         <img src="https://i.imgur.com/7yTYUIi.jpg" alt="profilepicture"></img>
                     </div>
-                    <h2 class="landing_page">...</h2>
+                    <h2 class="landing_page">Summary</h2>
                     <div class="svg-divider">
                             <svg height="20" width="100%">
                                 <line x1="0" y1="10" x2="100%" y2="10" style="stroke:#333;stroke-width:2" />
                             </svg>
+                    </div>
+                    <h2 class="landing_page">Work History/Resumes</h2>
+                    <div class="svg-divider">
+                            <svg height="20" width="100%">
+                                <line x1="0" y1="10" x2="100%" y2="10" style="stroke:#333;stroke-width:2" />
+                            </svg>
+                    </div>
+                    <div>
+                        <p>My current up to date Professional Resume: <a href="/resources/resumes/Professional_Jack_Cooper_CV.pdf" target="_blank">Professional Resume</a></p>
+                        <p>My current up to date General Workforce Resume: <a href="/resources/resumes/General_Jack_Cooper_CV.pdf" target="_blank">General Resume</a></p>
                     </div>
                 </main>
             </div>
