--- a/index.html
+++ b/index.html
@@ -42,6 +42,13 @@
                                 <line x1="0" y1="10" x2="100%" y2="10" style="stroke:#333;stroke-width:2" />
                             </svg>
                     </div>
+                    <div>
+                        <p>As a recent Computer Science graduate from the University of California, Santa Cruz, I am actively seeking job opportunities where I can apply and
+                        expand my technical skills. While I have a strong foundation in programming languages like C, C++, and Python, I am currently honing my skills in
+                        AI and machine learning, evident in my ongoing personal projects. My experience includes developing innovative software solutions and enhancing existing
+                        systems with a focus on efficiency and user experience. Beyond technical skills, my roles in customer service have sharpened my communication and
+                        problem-solving abilities, making me a well-rounded candidate for technology-focused positions.</p>
+                    </div>
                     <h2 class="landing_page">Work History/Resumes</h2>
                     <div class="svg-divider">
                             <svg height="20" width="100%">
