--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <h1 class="landing_page">Jack Cooper's Home Page</h1>
                         <p>Hello and welcome to my corner of the internet!</p>
                     <div class="image-container">
-                        <img src="https://i.imgur.com/7yTYUIi.jpg" alt="profilepicture"></img>
+                        <img src="https://i.imgur.com/7yTYUIi.jpg" alt="profilepicture" class="image-border"></img>
                     </div>
                     <h2 class="landing_page">Summary</h2>
                     <div class="svg-divider">
