--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div class="main-content">
         <!-- Home -->
         <div id="home" class="section">
-            <div class="container">
+            <div class="centered">
                 <main>
                     <h1 class="landing_page">Jack Cooper's Home Page</h1>
                         <p>Hello and welcome to my corner of the internet!</p>
