--- a/index.html
+++ b/index.html
@@ -16,14 +16,16 @@
             <h1>Jack Alexander Cooper</h1>
             <!-- Navigation Menu -->
             <div id="navToggle" class="nav-toggle">☰</div>
-            <nav id="navbar" class="navbar">
-                <a href="#home">Home</a> |
-                <a href="#about">About</a> |
-                <a href="#demos">Demos</a> |
-                <a href="#projects">Projects</a> |
-                <a href="#blog">Blog</a> |
-                <a href="#contact">Contact</a>
-            </nav>
+            <div id="navbarContainer" class="centered">
+                <nav id="navbar" class="navbar">
+                    <a href="#home">Home</a> |
+                    <a href="#about">About</a> |
+                    <a href="#demos">Demos</a> |
+                    <a href="#projects">Projects</a> |
+                    <a href="#blog">Blog</a> |
+                    <a href="#contact">Contact</a>
+                </nav>
+            </div>
         </div>
     </header>
     <div class="main-content">
