--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
     <header>
         <div id="container">
             <h1>Jack Alexander Cooper</h1>
-            <!-- Navigation Menu -->
-            <div id="navToggle" class="nav-toggle">☰</div>
-            <div id="navbarContainer" class="centered">
+            <div id="navbarContainer">
+                <!-- Toggle Nav Menu -->
+                <div id="navToggle" class="nav-toggle">☰</div>
+                <!-- Navigation Menu -->
                 <nav id="navbar" class="navbar">
                     <a href="#home">Home</a> |
                     <a href="#about">About</a> |
