--- a/index.html
+++ b/index.html
@@ -14,18 +14,26 @@
     <header>
         <div id="container">
             <h1>Jack Alexander Cooper</h1>
-            <div id="navbarContainer">
-                <!-- Toggle Nav Menu -->
-                <div id="navToggle" class="nav-toggle">☰</div>
-                <!-- Navigation Menu -->
-                <nav id="navbar" class="navbar">
-                    <a href="#home">Home</a> |
-                    <a href="#about">About</a> |
-                    <a href="#demos">Demos</a> |
-                    <a href="#projects">Projects</a> |
-                    <a href="#blog">Blog</a> |
-                    <a href="#contact">Contact</a>
-                </nav>
+            <!-- Toggle Nav Menu -->
+            <div id="navToggle" class="nav-toggle">☰</div>
+            <!-- Navigation Menu -->
+            <div class="svg-divider">
+                <svg height="20" width="100%">
+                    <line x1="0" y1="10" x2="100%" y2="10" style="stroke:#333;stroke-width:2" />
+                </svg>
+            </div>
+            <nav id="navbar" class="navbar">
+                <a href="#home">Home</a> |
+                <a href="#about">About</a> |
+                <a href="#demos">Demos</a> |
+                <a href="#projects">Projects</a> |
+                <a href="#blog">Blog</a> |
+                <a href="#contact">Contact</a>
+            </nav>
+             <div class="svg-divider">
+                <svg height="20" width="100%">
+                    <line x1="0" y1="10" x2="100%" y2="10" style="stroke:#333;stroke-width:2" />
+                </svg>
             </div>
         </div>
     </header>
@@ -34,16 +42,16 @@
         <div id="home" class="section">
             <div class="centered">
                 <main>
-                    <h1 class="landing_page">Jack Cooper's Home Page</h1>
+                    <h1 class="landing-page">Jack Cooper's Home Page</h1>
                         <p>Hello and welcome to my corner of the internet!</p>
                     <div class="image-container">
                         <img src="https://i.imgur.com/7yTYUIi.jpg" alt="profilepicture" class="image-border"></img>
                     </div>
-                    <h2 class="landing_page">Summary</h2>
+                    <h2 class="landing-page">Summary</h2>
                     <div class="svg-divider">
-                            <svg height="20" width="100%">
-                                <line x1="0" y1="10" x2="100%" y2="10" style="stroke:#333;stroke-width:2" />
-                            </svg>
+                        <svg height="20" width="100%">
+                            <line x1="0" y1="10" x2="100%" y2="10" style="stroke:#333;stroke-width:2" />
+                        </svg>
                     </div>
                     <div>
                         <p>As a recent Computer Science graduate from the University of California, Santa Cruz, I am actively seeking job opportunities where I can apply and
@@ -52,15 +60,20 @@
                         systems with a focus on efficiency and user experience. Beyond technical skills, my roles in customer service have sharpened my communication and
                         problem-solving abilities, making me a well-rounded candidate for technology-focused positions.</p>
                     </div>
-                    <h2 class="landing_page">Work History/Resumes</h2>
+                    <h2 class="landing-page">Work History/Resumes</h2>
                     <div class="svg-divider">
-                            <svg height="20" width="100%">
-                                <line x1="0" y1="10" x2="100%" y2="10" style="stroke:#333;stroke-width:2" />
-                            </svg>
+                        <svg height="20" width="100%">
+                            <line x1="0" y1="10" x2="100%" y2="10" style="stroke:#333;stroke-width:2" />
+                        </svg>
                     </div>
                     <div>
                         <p>My current up to date Professional Resume: <a href="/resources/resumes/Professional_Jack_Cooper_CV.pdf" target="_blank">Professional Resume</a></p>
                         <p>My current up to date General Workforce Resume: <a href="/resources/resumes/General_Jack_Cooper_CV.pdf" target="_blank">General Resume</a></p>
+                    </div>
+                    <div class="svg-divider">
+                        <svg height="20" width="100%">
+                            <line x1="0" y1="10" x2="100%" y2="10" style="stroke:#333;stroke-width:2" />
+                        </svg>
                     </div>
                 </main>
             </div>
