--- a/index.html
+++ b/index.html
@@ -12,35 +12,28 @@
 <script src="script.js"></script>
 <body>
     <header>
-        <div id="container">
-            <h1>Jack Alexander Cooper</h1>
-            <!-- Toggle Nav Menu -->
-            <div id="navToggle" class="nav-toggle">☰</div>
-            <!-- Navigation Menu -->
-            <div class="svg-divider">
-                <svg height="20" width="100%">
-                    <line x1="0" y1="10" x2="100%" y2="10" style="stroke:#333;stroke-width:2" />
-                </svg>
-            </div>
-            <nav id="navbar" class="navbar">
-                <a href="#home">Home</a> |
-                <a href="#about">About</a> |
-                <a href="#demos">Demos</a> |
-                <a href="#projects">Projects</a> |
-                <a href="#blog">Blog</a> |
-                <a href="#contact">Contact</a>
-            </nav>
-             <div class="svg-divider">
-                <svg height="20" width="100%">
-                    <line x1="0" y1="10" x2="100%" y2="10" style="stroke:#333;stroke-width:2" />
-                </svg>
-            </div>
+        <h1>Jack Alexander Cooper</h1>
+        <!-- Toggle Nav Menu -->
+        <div id="navToggle" class="nav-toggle">☰</div>
+        <!-- Navigation Menu -->
+        <div class="svg-divider">
+            <svg height="20" width="100%">
+                <line x1="0" y1="10" x2="100%" y2="10" style="stroke:#333;stroke-width:2" />
+            </svg>
         </div>
+        <nav id="navbar" class="navbar">
+            <a href="#home">Home</a> |
+            <a href="#about">About</a> |
+            <a href="#demos">Demos</a> |
+            <a href="#projects">Projects</a> |
+            <a href="#blog">Blog</a> |
+            <a href="#contact">Contact</a>
+        </nav>
     </header>
     <div class="main-content">
         <!-- Home -->
         <div id="home" class="section">
-            <div class="centered">
+            <div class="container">
                 <main>
                     <h1 class="landing-page">Jack Cooper's Home Page</h1>
                         <p>Hello and welcome to my corner of the internet!</p>
