--- a/index.html
+++ b/index.html
@@ -108,18 +108,18 @@
                         </svg>
                       </div>
                  <h2>Currently Inprogress</h2>
-                     <div class="svg-divider-sub">
-                            <svg height="20" width="100%">
-                                <line x1="0" y1="10" x2="100%" y2="10" style="stroke:#333;stroke-width:2" />
-                            </svg>
-                     </div>
+                    <div class="svg-divider">
+                        <svg class="divider-style" height="20" width="100%">
+                            <line x1="0" y1="10" x2="100%" y2="10" />
+                        </svg>
+                    </div>
                  <div class="container"></div>
                  <h2>Finished</h2>
-                     <div class="svg-divider-sub">
-                            <svg height="20" width="100%">
-                                <line x1="0" y1="10" x2="100%" y2="10" style="stroke:#333;stroke-width:2" />
-                            </svg>
-                     </div>
+                    <div class="svg-divider">
+                        <svg class="divider-style" height="20" width="100%">
+                            <line x1="0" y1="10" x2="100%" y2="10" />
+                        </svg>
+                    </div>
                  <div class="container"></div>
              </div>
          </div>
