--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
              <div class="container">
                  <h1>Demos</h1>
                      <div class="svg-divider">
-                        <svg height="20" width="100%">
-                            <line x1="0" y1="10" x2="100%" y2="10" style="stroke:#333;stroke-width:2" />
+                        <svg class="svg-divider-main" height="20" width="100%">
+                            <line x1="0" y1="10" x2="100%" y2="10" />
                         </svg>
                       </div>
              </div>
@@ -103,20 +103,23 @@
              <div class="container">
                  <h1>Projects</h1>
                      <div class="svg-divider">
-                        <svg height="20" width="100%">
-                            <line x1="0" y1="10" x2="100%" y2="10" style="stroke:#333;stroke-width:2" />
+                        <svg class="divider-style-main" height="20" width="100%">
+                            <line x1="0" y1="10" x2="100%" y2="10" />
                         </svg>
                       </div>
+             </div>
+             <div class="container">
                  <h2>Currently Inprogress</h2>
                     <div class="svg-divider">
-                        <svg class="divider-style" height="20" width="100%">
+                        <svg class="divider-style-alt" height="20" width="100%">
                             <line x1="0" y1="10" x2="100%" y2="10" />
                         </svg>
                     </div>
-                 <div class="container"></div>
+             </div>
+             <div class="container"></div>
                  <h2>Finished</h2>
                     <div class="svg-divider">
-                        <svg class="divider-style" height="20" width="100%">
+                        <svg class="divider-style-alt" height="20" width="100%">
                             <line x1="0" y1="10" x2="100%" y2="10" />
                         </svg>
                     </div>
