--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
                     <div class="image-container">
                         <img src="https://i.imgur.com/7yTYUIi.jpg" alt="profilepicture" class="image-border"></img>
                     </div>
+                    <!-- W3School's Charging Battery Animation -->
+                    <!-- source: https://www.w3schools.com/howto/howto_js_animate_icons.asp -->
+                    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
                     <h2 class="landing-page">Summary</h2>
                     <div class="svg-divider">
                         <svg height="20" width="100%">
