--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <div class="main-content">
         <!-- Home -->
         <div id="home" class="section">
-            <div class="centered-container">
+            <div class="container">
                 <main>
                     <h1 class="landing-page">Jack Cooper's Home Page</h1>
                         <p>Hello and welcome to my corner of the internet!</p>
