--- a/index.html
+++ b/index.html
@@ -119,14 +119,13 @@
                         </svg>
                     </div>
              </div>
-             <div class="container"></div>
+             <div class="container">
                  <h2>Finished</h2>
                     <div class="svg-divider">
                         <svg class="divider-style-alt" height="20" width="100%">
                             <line x1="0" y1="10" x2="100%" y2="10" />
                         </svg>
                     </div>
-                 <div class="container"></div>
              </div>
          </div>
          <!-- Blog -->
@@ -134,11 +133,11 @@
              <div class="container">
                  <h1>Personal Blog</h1>
                      <div class="svg-divider">
-                        <svg height="20" width="100%">
-                            <line x1="0" y1="10" x2="100%" y2="10" style="stroke:#333;stroke-width:2" />
+                        <svg class="divider-style-alt" height="20" width="100%">
+                            <line x1="0" y1="10" x2="100%" y2="10" />
                         </svg>
-                      </div>
-             </div>
+                     </div>
+              </div>
          </div>
          <!-- Contact Me -->
          <div id="contact" class="section" style="display: none;">
