--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
                     </div>
                     <!-- W3School's Charging Battery Animation -->
                     <!-- source: https://www.w3schools.com/howto/howto_js_animate_icons.asp -->
+                    <div id="charging" class="fa"></div>
                     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
                     <h2 class="landing-page">Summary</h2>
                     <div class="svg-divider">
