--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     </div>
                     <!-- W3School's Charging Battery Animation -->
                     <!-- source: https://www.w3schools.com/howto/howto_js_animate_icons.asp -->
-                    <div id="charging" class="fa"></div>
+                    <div id="battery-animation" class="animation-icon"></div>
                     <h2 class="landing-page">Summary</h2>
                     <div class="svg-divider">
                         <svg class="divider-style-main" height="20" width="100%">
@@ -165,6 +165,9 @@
     <footer>
         <div>
             <p>Copyright © Jack Alexander Cooper. All Rights Reserved.</p>
+        </div>
+        <div>
+            <div id="hourglass-animated" class="animation-icon"></div>
         </div>
     </footer>
 </body>
