--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
             <p>Copyright © Jack Alexander Cooper. All Rights Reserved.</p>
         </div>
         <div>
-            <div id="hourglass-animated" class="animation-icon"></div>
+            <div id="hourglass-animation" class="animation-icon"></div>
         </div>
     </footer>
 </body>
