--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <div class="container">
                 <main>
                     <h1 class="landing-page">Jack Cooper's Home Page</h1>
-                        <p>Hello and welcome to my corner of the internet!</p>
+                        <p class="center-text">Hello and welcome to my corner of the internet!</p>
                     <div class="image-container">
                         <img src="https://i.imgur.com/7yTYUIi.jpg" alt="profilepicture" class="image-border"></img>
                     </div>
@@ -46,7 +46,7 @@
                         </svg>
                     </div>
                     <div>
-                        <p>As a recent Computer Science graduate from the University of California, Santa Cruz, I am actively seeking job opportunities where I can apply and
+                        <p class="center-text">As a recent Computer Science graduate from the University of California, Santa Cruz, I am actively seeking job opportunities where I can apply and
                         expand my technical skills. While I have a strong foundation in programming languages like C, C++, and Python, I am currently honing my skills in
                         AI and machine learning, evident in my ongoing personal projects. My experience includes developing innovative software solutions and enhancing existing
                         systems with a focus on efficiency and user experience. Beyond technical skills, my roles in customer service have sharpened my communication and
@@ -59,8 +59,8 @@
                         </svg>
                     </div>
                     <div>
-                        <p>My current up to date Professional Resume: <a href="/resources/resumes/Professional_Jack_Cooper_CV.pdf" target="_blank">Professional Resume</a></p>
-                        <p>My current up to date General Workforce Resume: <a href="/resources/resumes/General_Jack_Cooper_CV.pdf" target="_blank">General Resume</a></p>
+                        <p class="center-text">My current up to date Professional Resume: <a href="/resources/resumes/Professional_Jack_Cooper_CV.pdf" target="_blank">Professional Resume</a></p>
+                        <p class="center-text">My current up to date General Workforce Resume: <a href="/resources/resumes/General_Jack_Cooper_CV.pdf" target="_blank">General Resume</a></p>
                     </div>
                     <div class="svg-divider">
                         <svg class="divider-style-main" height="20" width="100%">
