--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <div class="container">
                 <main>
                     <h1 class="landing-page">Jack Cooper's Home Page</h1>
-                        <p class="center-text">Hello and welcome to my corner of the internet!</p>
+                        <p class="center-text">Yo! Hello!</p>
                     <div class="svg-divider">
                         <svg class="divider-style-main" height="20" width="100%">
                             <line x1="0" y1="10" x2="100%" y2="10" />
