--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
             <div class="container">
                 <main>
                     <h1 class="landing-page">Jack Cooper's Home Page</h1>
+                        <div id="typed-text"></div>
                         <p class="center-text">Yo! Hello!</p>
                     <div class="svg-divider">
                         <svg class="divider-style-main" height="20" width="100%">
