--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             <a href="#blog">Blog</a> |
             <a href="#contact">Contact</a>
         </nav>
+        <button id="mode-toggle">Switch to Dark Mode</button>
     </header>
     <div class="main-content">
         <!-- Home -->
