--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <main>
                     <h1 class="landing-page">Home Page</h1>
                     <div class="centered-container">
-                        <div id="typed-text" class="typed-text-animation">Yo! Yo! What's up!?</div>
+                        <div id="typing-animation" class="typed-text-animation"></div>
                     </div>
                     <div class="svg-divider">
                         <svg class="divider-style-main" height="20" width="100%">
