--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <a href="#blog">Blog</a> |
             <a href="#contact">Contact</a>
         </nav>
-        <div class="navbar">
+        <div class="button">
             <button id="mode-toggle">Switch to Dark Mode</button>
         </div>
     </header>
