--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             <a href="#about">About</a> |
             <a href="#demos">Demos</a> |
             <a href="#projects">Projects</a> |
+            <a href="#music">Music (Spuqk)</a> |
             <a href="#blog">Blog</a> |
             <a href="#contact">Contact</a>
         </nav>
@@ -125,6 +126,17 @@
                             <line x1="0" y1="10" x2="100%" y2="10" />
                         </svg>
                     </div>
+             </div>
+         </div>
+        <!-- Music -->
+         <div id="music" class="section" style="display: none;">
+             <div class="container">
+                 <h1>Music (Spuqk)</h1>
+                     <div class="svg-divider">
+                        <svg class="svg-divider-main" height="20" width="100%">
+                            <line x1="0" y1="10" x2="100%" y2="10" />
+                        </svg>
+                      </div>
              </div>
          </div>
          <!-- Blog -->
