--- a/index.html
+++ b/index.html
@@ -173,11 +173,9 @@
          </div>
     </div>
     <footer>
-        <div class="button">
-            <button id="mode-toggle">Switch to Dark Mode</button>
-        </div>
         <div>
             <p>Copyright © Jack Alexander Cooper. All Rights Reserved.</p>
+            <button id="mode-toggle" class="button">Switch to Dark Mode</button>
         </div>
     </footer>
 </body>
