--- a/index.html
+++ b/index.html
@@ -87,13 +87,16 @@
          <!-- Demos -->
          <div id="demos" class="section" style="display: none;">
              <div class="container">
-                 <h1>Demos</h1>
+                 <h1>Project Demos</h1>
                  <div class="svg-divider">
-                    <svg class="svg-divider-main" height="20" width="100%">
+                    <svg class="divider-style-main" height="20" width="100%">
                         <line x1="0" y1="10" x2="100%" y2="10" />
                     </svg>
                   </div>
              </div>
+             <div class="container">
+             </div>
+             <div class="container">
          </div>
          <!-- Projects -->
          <div id="projects" class="section" style="display: none;">
@@ -126,12 +129,15 @@
          <div id="music" class="section" style="display: none;">
              <div class="container">
                  <h1>Music (Spuqk)</h1>
-                     <div class="svg-divider">
-                        <svg class="svg-divider-main" height="20" width="100%">
-                            <line x1="0" y1="10" x2="100%" y2="10" />
-                        </svg>
-                      </div>
+                 <div class="svg-divider">
+                    <svg class="divider-style-main" height="20" width="100%">
+                        <line x1="0" y1="10" x2="100%" y2="10" />
+                    </svg>
+                  </div>
              </div>
+             <div class="container">
+             </div>
+             <div class="container">
          </div>
          <!-- Blog -->
          <div id="blog" class="section" style="display: none;">
