--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                             <line x1="0" y1="10" x2="100%" y2="10" />
                         </svg>
                     </div>
-                    <div class="centered-container">
+                    <div class="container">
                         <p>My current up to date Professional Resume: <a href="/resources/resumes/Professional_Jack_Cooper_CV.pdf" target="_blank">Professional Resume</a></p>
                         <p>My current up to date General Workforce Resume: <a href="/resources/resumes/General_Jack_Cooper_CV.pdf" target="_blank">General Resume</a></p>
                     </div>
