--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 </svg>
             </div>
             <div class="container">
-                <p>As a recent Computer Science graduate from the University of California, Santa Cruz, I am actively seeking job opportunities where I can apply and
+                <p>As a Computer Science graduate from the University of California, Santa Cruz, I am actively seeking job opportunities where I can apply and
                 expand my technical skills. While I have a strong foundation in programming languages like C, C++, and Python, I am currently honing my skills in
                 AI and machine learning, evident in my ongoing personal projects. My experience includes developing innovative software solutions and enhancing existing
                 systems with a focus on efficiency and user experience. Beyond technical skills, my roles in customer service have sharpened my communication and
