--- a/index.html
+++ b/index.html
@@ -107,6 +107,29 @@
                         <line x1="0" y1="10" x2="100%" y2="10" />
                     </svg>
                 </div>
+              <div class="container">
+                  <h3>Programming Projects</h3>
+                  <ul><a href="https://github.com/Jack-A-Cooper/WonderLoom" target="_blank">Wonderloom</a> | Python</ul>
+                  <p>WonderLoom is envisioned as a companion tool that helps inspire imagination and spark creativity. A core concern of world building is contextual continuity while playing with friends or an AI Language Model (such as ChatGPT), 
+                       and this concept stays central in development efforts. Through contemporary frameworks and tools, the project aims to tackle the issue of world tracking in text-based game management and play. One can only go so far with world 
+                       building and interacting before details become muddied and concret tracking falls by the wayside. Or worse, the imagined story teller never bothered to remember your inventory's contents. A core component of WonderLoom's goal 
+                       is to serve as this tool; to help facilitate world data capture with ease. By utilizing such means as an ORM database backed with PostgreSQL 
+                       and powered through Python, organizing and utilizing data will no longer be an arduous chore. Players, world-builders, dreamers, and dataphiles alike may take advantage of the tool to focus on the aspects they enjoy most.
+                  </p>
+                  <ul><a href="https://github.com/Jack-A-Cooper/coa-generator" target="_blank">Coat of Arms Generator (COA Gen)</a> | Python</ul>
+                  <p>A tool to create personalized coats of arms with historical heraldic rules. Leveraging machine learning and neural networks trained to create highly detailed, unique, and correct coat of arms. Also incorporates handy scripts for project development
+                      and organization.
+                  </p>
+                  <h3>Research and Development Projects</h3>
+                  <ul>Stable Diffusion Training and Research | Various</ul>
+                  <p>Conducting research into Stable Diffusion and image generation techniques.</p>
+                  <h3>Creative Projects</h3>
+                  <ul>Game Design Research and Design | Various</ul>
+                  <p>Conducting research into developing nuanced game design techniques, mechanics, and overall design.</p>
+                  <ul>Worldbuilding Project (Early Original Work) | Various</ul>
+                  <p>Worldbuilding project I am working on with the collaboration with my best friend. Still too early to reveal too much, but utilizing current tools and technologies to help flesh out the world and bring it to life on paper and through AI image generatoin. Of course this is
+                      in tandem with good ol' drafting, testing, and tons of necessary brainstorming!</p>
+              </div>
          </div>
          <div class="container">
              <h2>Finished</h2>
@@ -115,6 +138,9 @@
                         <line x1="0" y1="10" x2="100%" y2="10" />
                     </svg>
                 </div>
+             <div class="container">
+                  <ul>Wonderloom|Python</ul>
+              </div>
          </div>
      </div>
     <!-- Music -->
@@ -141,6 +167,7 @@
                     </svg>
                  </div>
           </div>
+         <div class="container">Coming soon...</div>
      </div>
      <!-- Contact Me -->
      <div id="contact" class="section" style="display: none;">
