--- a/index.html
+++ b/index.html
@@ -141,7 +141,16 @@
                     </svg>
                 </div>
              <div class="container">
-                  <ul>Wonderloom|Python</ul>
+                  <h3>Programming Projects</h3>
+                  <ul><a href="https://github.com/Jack-A-Cooper/PokerCore" target="_blank">Pokercore</a> | C++ (Open Source)</ul>
+                  <p>Implemented a C++ class-based module implementation of a 5-hand poker hand evaluator based on a bitwise algorithm. Evolved to become a sophisticated program with other modules now 
+                      (such as implementing file validation [additional module], GoogleTest [testing suite], and CMake [build/compilation]). 
+                      A major inspiration for this project was reading Jonathan Hsiao's blog post about a bitwise algorithm to evaluate 5-hand poker hands I found very interesting. The original algorithm was implemented by Pat Wilson in JavaScript (2012).
+                  </p>
+                 <ul><a href="https://github.com/Jack-A-Cooper/Agar.io-Behavior-Tree-Bots" target="_blank">Agar.io-Behavior-Tree-Bots Fork</a> | JavaScript (Open Source)</ul>
+                  <p>Redesigns and improves Ogar3's AI bots by utilizing a behavior tree system.</p>
+                 <ul>Pintos OS CPU Scheduluer | C </ul>
+                  <p>This implementation features a round-robin CPU scheduling algorithm enhanced with priority-based preemption to prevent deadlocks. It leverages multithreading to apply core principles of concurrency, ensuring efficient task management and execution.</p>
               </div>
          </div>
      </div>
