--- a/index.html
+++ b/index.html
@@ -151,6 +151,8 @@
                   <p>Redesigns and improves Ogar3's AI bots by utilizing a behavior tree system.</p>
                  <ul>Pintos OS CPU Scheduluer | C </ul>
                   <p>This implementation features a round-robin CPU scheduling algorithm enhanced with priority-based preemption to prevent deadlocks. It leverages multithreading to apply core principles of concurrency, ensuring efficient task management and execution.</p>
+                 <ul>Helpful Automation Scripts | Python </ul>
+                  <p>Various light-weight python scripts that I have written to help me perform numerous tasks, ranging from directory organization to directory tree visualization. I plan to clean them up eventually and share them as open source scripts for anyone to use or build off from.</p>
               </div>
          </div>
      </div>
