--- a/index.html
+++ b/index.html
@@ -89,8 +89,7 @@
                 </svg>
               </div>
          </div>
-         <div class="container">
-         </div>
+         <div class="container">Coming soon... Will hopefully have some (preferably) hands-on demos or visual treats to play around with that I've worked on! Might also provide demos in video format with narration if the context requires it.</div>
      </div>
      <!-- Projects -->
      <div id="projects" class="section" style="display: none;">
@@ -215,7 +214,7 @@
                     </svg>
                  </div>
           </div>
-         <div class="container">Coming soon...</div>
+         <div class="container">Coming soon... Will need to allocate a lot of time to even just figure out the style of blog I'd enjoy let alone get writting one... (sigh) someday.</div>
      </div>
      <!-- Contact Me -->
      <div id="contact" class="section" style="display: none;">
