--- a/index.html
+++ b/index.html
@@ -77,7 +77,12 @@
                  ethos into every aspect of my life.
                  I'm excited to embark on this next chapter, applying the skills and insights I've gained to make a tangible impact in the world of tech and beyond.
                 </p>
-            </div >
+             <div class="photo-column">
+                  <img src="/images/me/p1.png" alt="Photo 1">
+                  <img src="/images/me/p2.png" alt="Photo 2">
+                  <img src="/images/me/p3.png" alt="Photo 3">
+            </div>
+        </div >
          </div>
      <!-- Demos -->
      <div id="demos" class="section" style="display: none;">
