--- a/index.html
+++ b/index.html
@@ -78,9 +78,24 @@
                  I'm excited to embark on this next chapter, applying the skills and insights I've gained to make a tangible impact in the world of tech and beyond.
                 </p>
              <div class="photo-column">
-                  <img src="/images/me/p1.png" alt="Photo 1">
-                  <img src="/images/me/p2.png" alt="Photo 2">
-                  <img src="/images/me/p3.png" alt="Photo 3">
+                  <img src="/images/Me/p1.png" alt="Photo 1">
+                  <img src="/images/Me/p2.png" alt="Photo 2">
+                  <img src="/images/Me/p3.png" alt="Photo 3">
+            </div>
+             <div class="photo-column">
+                  <img src="/images/Me/p3.png" alt="Photo 4">
+                  <img src="/images/Me/p4.png" alt="Photo 5">
+                  <img src="/images/Me/p5.png" alt="Photo 6">
+            </div>
+             <div class="photo-column">
+                  <img src="/images/Me/p6.png" alt="Photo 7">
+                  <img src="/images/Me/p7.png" alt="Photo 8">
+                  <img src="/images/Me/p8.png" alt="Photo 9">
+            </div>
+             <div class="photo-column">
+                  <img src="/images/Me/p10.png" alt="Photo 10">
+                  <img src="/images/Me/p11.png" alt="Photo 11">
+                  <img src="/images/Me/p12.png" alt="Photo 12">
             </div>
         </div >
          </div>
