--- a/index.html
+++ b/index.html
@@ -111,7 +111,16 @@
                 </svg>
               </div>
          </div>
-         <div class="container">Coming soon... Will hopefully have some (preferably) hands-on demos or visual treats to play around with that I've worked on! Might also provide demos in video format with narration if the context requires it.</div>
+         <div class="container">Coming soon... Will hopefully have some (preferably) hands-on demos or visual treats to play around with that I've worked on! Might also provide demos in video format with narration if the context requires it.
+         </div>
+         <div class="photo-grid">
+                  <div class="photo-row">
+                          <img src="/images/content/BBY_workflow.png.png" alt="Photo 1">
+                  </div>
+                  <div class="photo-row">
+                          <img src="/images/Me/System Design Chart - Amazon Product Concept.png" alt="Photo 2">
+                  </div>
+         </div>
      </div>
      <!-- Projects -->
      <div id="projects" class="section" style="display: none;">
