--- a/index.html
+++ b/index.html
@@ -113,6 +113,10 @@
          </div>
          <div class="container">Coming soon... Will hopefully have some (preferably) hands-on demos or visual treats to play around with that I've worked on! Might also provide demos in video format with narration if the context requires it.
          </div>
+         <div class="container"> In the meantime, feel free to check out these diagrams I created. The first is my take on streamlining the Best Buy home theater department workflow and converting it to a cpu flowchart! (I was terribly bored).
+         </div>
+         <div class="container">The second is a conceptual system design mockup for an Amazon service. At least my attempt to apply my knowledge and make a pretty technical diagram at the same time.
+         </div>
          <div class="photo-grid">
                   <div class="photo-row">
                           <img src="/images/content/BBY_workflow.png.png" alt="Photo 1">
