--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
          </div>
          <div class="photo-grid">
                   <div class="photo-row">
-                          <img src="/images/content/BBY_workflow.png.png" alt="Photo 1">
+                          <img src="/images/content/BBY_workflow.png" alt="Photo 1">
                   </div>
                   <div class="photo-row">
                           <img src="/images/Me/System Design Chart - Amazon Product Concept.png" alt="Photo 2">
